fix publish send mail button align

--- a/css/app/calendarlist.css
+++ b/css/app/calendarlist.css
@@ -395,11 +395,10 @@ input.mailerInput {
 }
 
 .mailerInput + button {
-	position: relative;
-	top: -5px;
 	height: 32px;
 	margin-right: 0;
 	width: 32px;
+	vertical-align: bottom;
 }
 
 /* Calendar Sharing */
